k8s/k8s-prod/workloads/networking/cloudflared/work-domain/ingress.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.26.1-standalone-strict/ingress-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &host "ingress.${SECRET_DOMAIN_WORK}"
  namespace: networking
  labels:
    app.kubernetes.io/name: work-ingress-dummy
spec:
  ingressClassName: nginx-internal
  rules:
    - host: *host
      http:
        paths: []
  tls:
    - hosts:
        - *host
